objects/Owner_Principal__c.object
<CustomObject>
    <description>This is used to capture info from business credit report regarding ownership of the business based on past reporting.</description>
    <fields>
        <fullName>Business_Credit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Credit Report</label>
        <referenceTo>nXBI__Business_Credit_Report__c</referenceTo>
        <relationshipLabel>Owners/Principals</relationshipLabel>
        <relationshipName>Owners_Principals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Principal_Name__c</fullName>
        <label>Owner/Principal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SSN_TIN__c</fullName>
        <label>SSN/TIN</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Owner/Principal</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Owner/Principal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Owners/Principals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>